# wake_encounter

./: .gitignore  01_analysis.ipynb  README.md  environment.yml  main.py  pyproject.toml  run_sim.sh  simulation.py  slurm-2181.out  slurm-4986.out  slurm-5030.out  slurm-5037.out  slurm-5113.out
.ipynb_checkpoints/: 01_analysis-checkpoint.ipynb
P2P_base/p2p/: P2P  P2P_dim.plo  P2P_norm.plo  README.md  main_P2P_ZHAW.f  while_script
P2P_base/test/: test_wake.py
P2P_base/utils/: __init__.py  coords.py  p2p.py  viz.py
P2P_base/wake/: __init__.py  aircraft.py  meteo.py  wake.py
data/aircraft_database/: aircraft_db.parquet  naca23012_camber.txt  naca23012_neg_camber.txt  sc20712_camber.txt  sc20712_camber_refined.txt
data/simulations/1/encounter/: encounter_df.parquet  param.parquet
run/: 01_analysis.ipynb  analysis.ipynb  run_sim.sh  simulation.py  slurm-2199.out  slurm-2218.out  slurm-2223.out  slurm-3209.out  slurm-3210.out  slurm-3214.out  slurm-3229.out  slurm-3234.out  slurm-3241.out  slurm-3312.out  test_simulation.py  test_simultation.ipynb  wake_encounter_plot.py
wake_generation/: generator.py  run_slurm_generator.sh  run_slurm_test_p2p.sh  run_slurm_trailer.sh  slurm-4682.out  slurm-4683.out  slurm-4684.out  test_p2p.ipynb  test_p2p.py  test_wake_traj.ipynb  trailer.py
wake_generation/.ipynb_checkpoints/: test_p2p-checkpoint.ipynb
wake_modeling/: fuselage_wing_configuration.py  fwc_aero.py  fwc_fuselage.py  fwc_get_settings.py  fwc_structure.py  fwc_velocity_field.py  fwc_wake_encounter.py  plot_results.ipynb  test_wake_modeling.ipynb
(+24 files in other folders)
