[project]
name = "wake-encounter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "eigen>=0.1.1",
    "fastparquet>=2024.11.0",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.1",
    "notebook>=7.4.1",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "pyarrow>=19.0.1",
    "pyproj>=3.7.1",
    "seaborn>=0.13.2",
    "shapely>=2.1.0",
    "statsmodels>=0.14.4",
    "svgpath2mpl>=1.0.0",
    "traffic>=2.12",
    "xarray>=2025.3.1",
]
